<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="ClickHandlers"
            type="com.acegroup.livelocationtracker.view.faculties.FacultySignUp.SignUpActivityClickHandlers"/>
    </data>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/reading">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewProfilePictureFaculty"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_8x"
            android:layout_width="wrap_content"
            android:onClick="@{ClickHandlers::onImageClicked}"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/dimen_64x"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/text_16x"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trade_winds"
            android:text="@string/choose_profile_picture" />
        <TextView
            android:layout_marginTop="@dimen/dimen_16x"
            android:id="@+id/textViewInfo"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/dimen_4x"
            android:textSize="@dimen/text_16x"
            android:fontFamily="@font/new_rocker"
            android:layout_height="wrap_content"
            android:text="@string/you_can_sign_up_via_email_or_phone_number_or_both" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="49dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/college_school"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_employeeid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/employeeid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_number"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x"
            app:passwordToggleEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupbuttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_64x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_64x"
            android:layout_marginBottom="@dimen/dimen_16x"
            android:onClick="@{ClickHandlers::onSignUpButtonClicked}"
            android:background="@color/yellow"
            android:foreground="?attr/selectableItemBackground"
            android:hint="@string/signupp"
            android:layout_gravity="bottom"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

    </LinearLayout>
</ScrollView>
</layout>
