<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="ClickHandlers"
            type="com.acegroup.livelocationtracker.view.students.StudentLogin.LoginActivityClickHandlers"/>
    </data>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/reading"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewSL"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:baselineAligned="true"
            android:padding="24dp"
            app:srcCompat="@drawable/realtime"
            tools:ignore="ContentDescription"
            android:layout_height="0dp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="49dp"
            android:layout_height="44dp"
            android:visibility="gone"
            android:layout_gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="0dp"
                android:paddingRight="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword|textWebPassword"
                android:paddingLeft="0dp"
                android:paddingRight="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewforgotstu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="@string/fpwd"
            android:stateListAnimator="@null"
            android:elevation="4dp"
            android:onClick="@{ClickHandlers::onForgotPasswordClicked}"
            android:textColor="@color/dark_grey"
            android:textColorHighlight="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/textViewloginviaphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="@string/login_via_phone_number"
            android:stateListAnimator="@null"
            android:elevation="4dp"
            android:onClick="@{ClickHandlers::onLoginViaPhone}"
            android:textColor="@color/dark_grey"
            android:textColorHighlight="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/loginasfaculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/dimen_32x"
            android:paddingTop="@dimen/dimen_16x"
            android:paddingRight="@dimen/dimen_32x"
            android:paddingBottom="@dimen/dimen_16x"
            android:text="@string/otherloginoptions"
            android:stateListAnimator="@null"
            android:elevation="4dp"
            android:onClick="@{ClickHandlers::onLoginAsFacultyClicked}"
            android:textColor="@color/dark_grey"
            android:textColorHighlight="@color/dark_grey"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:elevation="4dp"
            android:layout_marginLeft="@dimen/dimen_32x"
            android:layout_marginTop="@dimen/dimen_16x"
            android:layout_marginRight="@dimen/dimen_32x"
            android:text="@string/login"
            android:clickable="true"
            android:onClick="@{ClickHandlers::onLoginButtonClicked}"
            android:background="@color/yellow"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textColor="@color/black"
            tools:targetApi="m"
            android:focusable="true" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:elevation="4dp"
            android:onClick="@{ClickHandlers::onSignUpButtonClicked}"
            android:layout_marginTop="@dimen/dimen_16x"
            android:text="@string/signup"
            tools:targetApi="lollipop" />

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>